Fix overlapping of responses and response details printing

--- a/public/stylesheets/formResponses.scss
+++ b/public/stylesheets/formResponses.scss
@@ -27,6 +27,7 @@
 }
 
 .printButton {
+    display: inline-block;
     height: 28px;
     width: 58px;
 
