--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -137,7 +137,7 @@ table.form-responses {
 
   @media print {
     & {
-    position: absolute;
+      position: absolute;
     }
   }
 
@@ -167,10 +167,8 @@ table.form-responses {
   @media print {
     .content {
       overflow: visible;
-      height: 100%;
     }
   }
-
 
   button {
     cursor: pointer;
@@ -195,10 +193,6 @@ table.form-responses {
 }
 
 @media print {
-  #logowrapper, .form-responses, .stats, .pagination, .no-print {
-    display: none;
-  }
-
   p {
     page-break-inside: avoid;
     page-break-after: auto;
